samples/_failures_safe/1761042732_baa4de_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a624a6d1.c: In function ‘main’:
./samples/SAFE/__tmp_a624a6d1.c:165:5: error: expected declaration or statement at end of input
  165 |     if (fgets(input, sizeof(input), stdin) == NULL) {
      |     ^~
./samples/SAFE/__tmp_a624a6d1.c:165:5: error: expected declaration or statement at end of input
